--- a/styles.css
+++ b/styles.css
@@ -54,3 +54,11 @@ th, td {
 th {
     background-color: #f2f2f2;
 }
+
+.status-unconfirmed {
+    background-color: #ffcccc;
+}
+
+.status-confirmed {
+    background-color: #ccffcc;
+}
